--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
 auto-install-peers=true
+# Ensure graphql and graphql-ws use the same module instance
+public-hoist-pattern[]=graphql
+public-hoist-pattern[]=graphql-ws
