--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "tsc --build",
-    "dev": "npm run dev --workspaces --if-present",
-    "test": "vitest run",
-    "test:unit": "npm run test:unit --workspaces --if-present",
-    "test:integration": "npm run test:integration --workspaces --if-present",
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "test": "turbo run test",
+    "test:unit": "turbo run test:unit",
+    "test:integration": "turbo run test:integration",
     "test:watch": "vitest",
-    "clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
-    "typecheck": "tsc --build",
-    "lint": "eslint packages/*/src packages/*/test",
-    "lint:fix": "eslint packages/*/src packages/*/test --fix",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "typecheck": "turbo run typecheck",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
     "format": "prettier --write \"packages/*/src/**/*.ts\" \"packages/*/test/**/*.ts\"",
     "format:check": "prettier --check \"packages/*/src/**/*.ts\" \"packages/*/test/**/*.ts\"",
     "docs:dev": "npm run dev --prefix docs",
@@ -32,6 +32,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.7.4",
+    "tsup": "^8.4.0",
+    "turbo": "^2.7.2",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.50.1",
     "vitest": "^4.0.16"
@@ -39,5 +41,6 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "packageManager": "pnpm@10.26.1",
   "license": "MIT"
 }
