--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "effect-gql-monorepo",
+  "version": "1.2.0",
   "repository": {
     "url": "https://github.com/nrf110/effect-gql"
   },
@@ -28,10 +29,11 @@
     "docs:build": "npm run build --prefix docs",
     "docs:preview": "npm run preview --prefix docs",
     "prepare-publish": "pnpm tsx scripts/prepare-publish.ts",
-    "release": "pnpm run prepare-publish && pnpm tsx scripts/publish.ts"
+    "release": "pnpm run version:sync && pnpm run build && pnpm run prepare-publish && pnpm tsx scripts/publish.ts",
+    "version:sync": "pnpm tsx scripts/sync-versions.ts",
+    "version:bump": "pnpm tsx scripts/bump-version.ts"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.29.8",
     "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.3",
     "tsx": "^4.19.0",
