fix(cli): properly resolve tsx loader for multi-file TypeScript schemas
The --import tsx flag was using just 'tsx' which Node.js resolves from
the current working directory, not from where the CLI is installed.

Fix by:
1. Adding tsx as a regular dependency of @effect-gql/cli
2. Using require.resolve('tsx') to get the full path from the CLI's
   node_modules, ensuring it works regardless of the user's project setup

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,6 +35,9 @@
     "effect": "^3.19.0",
     "graphql": "^16.0.0"
   },
+  "dependencies": {
+    "tsx": "^4.21.0"
+  },
   "devDependencies": {
     "@effect-gql/core": "*",
     "effect": "^3.19.14",
