refactor(cli): update dependency resolution and improve TypeScript configuration
- Changed the dependency specification for `@effect-gql/core` to use `workspace:*` in both `pnpm-lock.yaml` and `package.json`.
- Introduced a new `tsconfig.build.json` for better TypeScript build configuration.
- Adjusted `tsconfig.json` to include test files and modified the root directory.
- Updated `tsup.config.ts` to reference the new TypeScript configuration.
- Enhanced `vitest.config.ts` to ensure consistent GraphQL instance resolution.
- Refactored type definitions in `field-builders.ts` to improve type safety.
- Added comprehensive tests for branded and option types in `schema-mapping-option-branded.test.ts`.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,7 +39,7 @@
     "tsx": "^4.21.0"
   },
   "devDependencies": {
-    "@effect-gql/core": "*",
+    "@effect-gql/core": "workspace:*",
     "effect": "^3.19.14",
     "graphql": "^16.0.0"
   },
