--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDir": ".",
     "paths": {
       "@effect-gql/core": ["../core/src/index.ts"],
       "@effect-gql/core/*": ["../core/src/*"],
     },
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test"],
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["node_modules", "dist"],
 }
